add contract management in front
