# public/docs/openapi.yaml
@@ -746,12 +746,12 @@ paths:
         -
           in: query
           name: has_pledges
-          description: 'Filtrer par type de présence de gage'
+          description: 'Filtrer par présence de gage'
           example: null
           required: false
           schema:
             type: integer
-            description: 'Filtrer par type de présence de gage'
+            description: 'Filtrer par présence de gage'
             example: null
         -
           in: query
@@ -782,6 +782,16 @@ paths:
           schema:
             type: integer
             description: 'Afficher le type de demandeur.'
+            example: 0
+        -
+          in: query
+          name: with_caf
+          description: 'Afficher le caf en charge du dossier.'
+          example: 0
+          required: false
+          schema:
+            type: integer
+            description: 'Afficher le caf en charge du dossier.'
             example: 0
         -
           in: query
@@ -893,6 +903,32 @@ paths:
                   type: string
                   description: 'La présence de gage.'
                   example: '0'
+  '/api/contract/download/{id}':
+    get:
+      summary: "Télécharge la version word d'un contrat"
+      operationId: tlchargeLaVersionWordDunContrat
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - Contrat
+    parameters:
+      -
+        in: path
+        name: id
+        description: "L'ID du contrat."
+        example: 1
+        required: true
+        schema:
+          type: integer
   '/api/contract/{id}':
     get:
       summary: 'Affiche un contrat'
@@ -928,6 +964,16 @@ paths:
           schema:
             type: integer
             description: 'Afficher le type de demandeur.'
+            example: 0
+        -
+          in: query
+          name: with_caf
+          description: 'Afficher le CAF en charge du dossier.'
+          example: 0
+          required: false
+          schema:
+            type: integer
+            description: 'Afficher le CAF en charge du dossier.'
             example: 0
         -
           in: query
@@ -1262,6 +1308,16 @@ paths:
             example: 1
         -
           in: query
+          name: with_type_of_guarantees
+          description: 'Afficher les types des garanties.'
+          example: 1
+          required: false
+          schema:
+            type: integer
+            description: 'Afficher les types des garanties.'
+            example: 1
+        -
+          in: query
           name: with_contract
           description: 'Afficher le contrat.'
           example: 1
@@ -1280,6 +1336,16 @@ paths:
             type: integer
             description: 'Afficher le CAF.'
             example: 1
+        -
+          in: query
+          name: has_contract
+          description: 'Filtrer par présence de contrat'
+          example: 0
+          required: false
+          schema:
+            type: integer
+            description: 'Filtrer par présence de contrat'
+            example: 0
         -
           in: query
           name: paginate
@@ -1431,6 +1497,16 @@ paths:
           schema:
             type: integer
             description: 'Afficher les garanties.'
+            example: 1
+        -
+          in: query
+          name: with_type_of_guarantees
+          description: 'Afficher les types des garanties.'
+          example: 1
+          required: false
+          schema:
+            type: integer
+            description: 'Afficher les types des garanties.'
             example: 1
         -
           in: query
